Revert "Created a new assets folder, added a new png"

--- a/Before You Start/1. Motivation Mindset.md
+++ b/Before You Start/1. Motivation Mindset.md
@@ -1,13 +1,10 @@
-# Introduction
+### Introduction
 
-<!-- ## Mindset -->
-
-<img src="../Assets/Mindset.jpg">
+## Mindset
 
 Having the right mindset is crucial when starting on your programming journey. While the technical aspects are undoubtedly important, your attitude, approach, and mentality play a significant role in your success. Understanding why you're learning programming can significantly shape your mindset and approach. People come to programming for a variety of reasons, and identifying your motives can help you stay motivated and focused on your goals.
 
 Here are some key mindset considerations for beginner programmers.
-
 
 ### Embrace the Learning Curve
 
