Added banners and changed file name

--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -1,15 +1,12 @@
-# Introduction
+<img src="../Assets/Mindset.webp">
 
-<!-- ## Mindset -->
-
-<img src="../Assets/Mindset.jpg">
-
+<br/>
 Having the right mindset is crucial when starting on your programming journey. While the technical aspects are undoubtedly important, your attitude, approach, and mentality play a significant role in your success. Understanding why you're learning programming can significantly shape your mindset and approach. People come to programming for a variety of reasons, and identifying your motives can help you stay motivated and focused on your goals.
 
 Here are some key mindset considerations for beginner programmers.
 
 
-### Embrace the Learning Curve
+<img src="../Assets/Learning Curve.webp">
 
 Programming, like any skill, has a learning curve. Understand that it's completely normal to feel challenged and even frustrated at times. Don't be discouraged by initial difficulties; instead, view them as opportunities for growth. Remember, every programmer, no matter how experienced, started where you are right now.
 
@@ -46,5 +43,8 @@ Some individuals are simply curious about how software and technology work. If y
 Even if you don't plan to become a professional programmer, learning the basics of programming can provide a solid foundation for understanding the digital world. It enables you to communicate more effectively with developers, understand technical concepts, and make informed decisions in various contexts.
 
 ## Syndromes
+
+### Impostor syndrome
+when you feel like you're not good enough at something, even if you actually are. You might think that your achievements are just luck, and you're afraid that others will find out you're not as good as they think you are. It's like feeling like a fake even when you're doing well.
+
 ## Tutorial Hell
-## checking
