tutorial sample text

--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -46,3 +46,4 @@ Even if you don't plan to become a professional programmer, learning the basics 
 when you feel like you're not good enough at something, even if you actually are. You might think that your achievements are just luck, and you're afraid that others will find out you're not as good as they think you are. It's like feeling like a fake even when you're doing well.
 
 ## Tutorial Hell
+asdasd lasd sakd lsj asjdhsahd hasjkdh kashkjdh ksadj jasdj sajkdkj as sadkasdjasjdhasdkajdshjajsd
