--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -42,8 +42,38 @@ Even if you don't plan to become a professional programmer, learning the basics 
 
 ## Syndromes
 
-### Impostor syndrome
-when you feel like you're not good enough at something, even if you actually are. You might think that your achievements are just luck, and you're afraid that others will find out you're not as good as they think you are. It's like feeling like a fake even when you're doing well.
+### What is a Syndrome?
 
+
+
+_Coding, similar to other complicated tasks, can occasionally result in different ways our minds and behaviors react. People often casually call these reactions "<b>syndromes.</b>" These aren't exactly medical issues, but rather explanations of common situations that programmers might face._ 
+
+- Impostor Syndrome
+- Rabbit Hole Syndrome
+- Burnout
+- Perfectionism
+
+### Impostor Syndrome
+_when you feel like you're not good enough at something, even if you actually are. You might think that your achievements are just luck, and you're afraid that others will find out you're not as good as they think you are. It's like feeling like a fake even when you're doing well._
+
+- 💯 [Developer Impostor Syndrome Facts by _**Stefan Mischook**_](https://www.youtube.com/watch?v=gLbfGW-rfZw)
+- 🉑 [How to Overcome Developer Impostor Syndrome by _**HoneyPot.io**_](https://cult.honeypot.io/reads/developer-imposter-syndrome-how-to-overcome-it/)
+
+### Rabbit Hole Syndrome
+_Developers can sometimes get caught up in researching or investigating a particular problem, leading them to dig deeper and deeper without making any actual progress on their project. It's like digging deep without any value which leads to wasting your precious time._
+
+### Burnout
+_Coding can be intense and demanding, leading to burnout—a state of emotional, physical, and mental exhaustion. Burnout can result from prolonged periods of stress, overwork, and lack of self-care. We have listed down necessary important links that you can avoid burnout easily_
+
+| Important Lessons | Estimate Minutes | Source Type |
+|--|--|--|
+| 🚀 [How to Deal With Programming Burnout](https://pythonistaplanet.com/programmer-burnout/#google_vignette) | 3 Mins | Blog Post |
+| ❤️ [Dealing With Burnout isn't Easy](https://www.youtube.com/watch?v=YyjBKqsJqAo&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 7 Mins | Video |
+| ⚡  [How to Avoid Burnout By Ali Abdaal](https://www.youtube.com/watch?v=lylveWfXknk&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 5 Mins | Video | 
+| 🎒 [15 Minutes A Day to Prevent Burnout - TEDX Talk](https://www.youtube.com/watch?v=Uk3OAGcjQPA&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 15 Mins | Video |
+
+
+### Perfectionism
+
+_Programmers might aim for perfection in their code, which can lead to spending excessive time on small details and features, delaying the completion of the project._
 ## Tutorial Hell
-asdasd lasd sakd lsj asjdhsahd hasjkdh kashkjdh ksadj jasdj sajkdkj as sadkasdjasjdhasdkajdshjajsd
