Added relevant links to the section

--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -76,4 +76,9 @@ _Coding can be intense and demanding, leading to burnout—a state of emotional,
 ### Perfectionism
 
 _Programmers might aim for perfection in their code, which can lead to spending excessive time on small details and features, delaying the completion of the project._
+
+- ⚪ [10 Signs of a Problem With Perfectionism -  _**Psychology Today**_](https://www.psychologytoday.com/us/blog/the-reality-gen-z/202109/10-signs-problem-perfectionism)
+
+**All links are curated carefully from the authentic sources and fact checked.**
+
 ## Tutorial Hell
