Tutorial hell defined

--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -82,3 +82,5 @@ _Programmers might aim for perfection in their code, which can lead to spending 
 **All links are curated carefully from the authentic sources and fact checked.**
 
 ## Tutorial Hell
+
+"Tutorial hell" is when someone who's learning to code gets stuck always doing tutorials without getting better at coding on their own. They keep following instructions but struggle to create their own code. This can make them feel frustrated and unsure about their skills. It's like reading cooking recipes but never making your own dishes. It's important to practice coding by yourself to improve.
