--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -1,15 +1,21 @@
 
 <h1>Tools That You Require to Start Your Development Journey</h1>
 
-In order to start your development journey, Definitely you need a PC / Laptop and IDE which stands for _Intergrated Development Environment_ does this sound overwhelm for you? Even if it does, Don't worry! we will teach you everything step by step. 
+In order to start your development journey, Definitely you need a PC / Laptop and IDE which stands for _Intergrated Development Environment_ does this sound overwhelm for you? Even if it does, Don't worry! we will teach you everything step by step and also we will provide "**GO-TO**" resources to check yourself. 
 
 Tools are like equipments that you cannot work without them, For a Wood woker hand tools are necessary to continue to cut woods. Same as like that, For developers we need right equipments to craft a magnificent <b><a href="https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app">Webapp</a></b>.
 
-Tools
+<h3>Tools</h3>
+
 - Computer / Laptop
 - IDE (Visual Studio Code / Sublime Text / Neovim)
 - Recommended Operating System
 - Difference between OS (for an extended knowledge)
 - Note taking App / Notebook
 
+Questions that a newbie must ask? 
+--
+What is IDE? 
+
+An "IDE" is like a special computer program that helps people who are making software. It gives them tools to write, test, and organize their code all in one place. It's like a toolbox for coding.
 
