Updating contents on IDE summary

--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -19,3 +19,13 @@ What is IDE?
 
 An "IDE" is like a special computer program that helps people who are making software. It gives them tools to write, test, and organize their code all in one place. It's like a toolbox for coding.
 
+Lists of IDE
+- Visual Studio Code. | [Link](https://code.visualstudio.com/) ✨
+- Sublime Text. | [Link](https://www.sublimetext.com/) ✨
+- IntelliJ Idea | [Link](https://www.jetbrains.com/idea/) ✨
+- XCode. | [Link](https://developer.apple.com/xcode/) ✨
+
+**XCode** - _Xcode is like a special toolbox that helps people make apps for iPhones, iPads, and Mac computers._ 
+
+You can choose one of the IDE as your toolbox to continue your development journey, but some of them demanding higher CPU power to work in smooth, but <mark>**We recommend Visual Studio Code**</mark> because they've got extensive plugins, and community support. Including us, We use VS Code as well 😃😃. 
+
