--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -28,5 +28,11 @@ Lists of IDE
 
 **XCode** - _Xcode is like a special toolbox that helps people make apps for iPhones, iPads, and Mac computers._ 
 
-You can choose one of the IDE as your toolbox to continue your development journey, but some of them demanding higher CPU power to work in smooth, but <mark>**We recommend Visual Studio Code**</mark> because they've got extensive plugins, and community support. Including us, We use VS Code as well 😃😃. 
+You can choose one of the IDE as your toolbox to continue your development journey, but some of them demanding higher CPU power to work in smooth, but <mark>**We recommend Visual Studio Code**</mark> because they've got extensive plugins, and community support. Including us, We use VS Code as well 😃😃.
 
+For Your Information, Supplemental resources why VSCode fair and square to all type of developer including super-beginners like you. 
+
+I personally love FireShip.io videos and we've tons of references in our "**Archive X**" where we saved all the authentic and up to date references to learn something new. 
+
+- 😎 [**VS Code In 100 Seconds**](https://www.youtube.com/watch?v=KMxo3T_MTvY&pp=ygUTV2h5IFZTIGNvZGUgaXMgZ29vZA==) By FireShip
+- 🌞 [**I Tried 10 Code Editors**](https://www.youtube.com/watch?v=8PhdfcX9tG0&pp=ygUUeGNvZGUgaW4gMTAwIHNlY29uZHM%3D) By FireShip
