Made changes to Banner - pls read description

--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -1,44 +1,44 @@
-<img src="../Assets/Mindset.webp">
-<br/>
-Having the right mindset is crucial when starting on your programming journey. While the technical aspects are undoubtedly important, your attitude, approach, and mentality play a significant role in your success. Understanding why you're learning programming can significantly shape your mindset and approach. People come to programming for a variety of reasons, and identifying your motives can help you stay motivated and focused on your goals.
+![Mindset](../Assets/Mindset.webp)
 
-Here are some key mindset considerations for beginner programmers.
+Having the right mindset is like writing the perfect code - it's crucial for success. 🎯 Just as mastering the technical aspects is vital, your attitude, approach, and mentality are the keystrokes that shape your journey. Your reasons for embarking on this coding adventure have a significant impact on your mindset and approach. Whether you're coding to conquer the world or simply to conquer your own goals, your motives play a huge role in keeping you inspired and locked onto your targets.
 
-<img src="../Assets/Learning Curve.webp">
-<br/>
-Programming, like any skill, has a learning curve. Understand that it's completely normal to feel challenged and even frustrated at times. Don't be discouraged by initial difficulties; instead, view them as opportunities for growth. Remember, every programmer, no matter how experienced, started where you are right now.
+## 🌟 Embrace the Learning Curve with Confidence 🌟
 
-### Your Unique Motivation
+Programming, much like life, has its own learning curve. 📈 Feeling challenged or even frustrated? That's perfectly normal! Rather than letting initial roadblocks slow you down, treat them as stepping stones to progress. Remember, every coding wizard, no matter how magical they seem now, started right where you are.
 
-Identifying your motive for learning programming is a personal and introspective exercise. Reflect on what drives you to learn and consider how that motivation can influence your mindset and approach as you start on this exciting journey.
+## 🚀 Fuel Your Mind with Motivation 🚀
 
-### Learn How to Learn
+Finding your personal programming muse is a journey of introspection. 🔍 Why do you want to code? Delve into your motivations, and let them shape your mindset and strategy as you embark on this thrilling odyssey.
 
-The world of programming is ever-evolving, with new languages, libraries, and frameworks emerging regularly. Therefore, a vital skill for a programmer is the ability to learn efficiently and adapt to changes. Practice effective research skills, explore documentation, watch tutorials, and participate in online forums to enhance your learning capabilities.
+## 📚 Master the Art of Learning 📚
 
-### Celebrate Progress
+Programming's universe is an ever-expanding galaxy of languages, libraries, and frameworks. 🌌 The true superhero skill? Learning how to learn efficiently. Surf the web of documentation, explore tutorials, and join the superhero league of online forums - this is your training montage for becoming a coding dynamo.
 
-Programming can be intense, but it's important to celebrate your progress and achievements along the way. Whether you successfully debugged a challenging issue, completed a tutorial, or built a small project, these milestones showcase your growth. Take a moment to acknowledge your hard work—it's well-deserved.
+## 🎉 Cheers to Milestones! 🎉
 
-### Career Advancement
+Coding might make you break a sweat, but remember to celebrate even the tiniest of victories. 🎈 Whether you wrestled with a pesky bug, completed a tutorial, or fashioned a small digital marvel, each achievement is a page in your progress saga. Take a moment, pat yourself on the back, you've earned it!
 
-Many individuals are drawn to programming as a means to advance their careers. In an increasingly digital world, programming skills are in high demand across various industries. Learning to code opens up opportunities in software development, web development, data analysis, and more. If you're looking to transition into a tech-related job or enhance your existing career, mastering programming can be a game-changer.
+## 💼 Level Up Your Career 💼
 
-### Personal Projects and Hobbies
+The programming universe isn't just ones and zeros; it's a cosmic landscape of career opportunities. 🌠 As our world gets digitized, programming skills are the currency of choice. Whether you're ascending your career ladder or reshaping its rungs, mastery of code can be your game-changer.
 
-Programming isn't just a tool for work—it's also a powerful tool for personal projects and creative endeavors. Whether you want to build your website, create a mobile app, design a game, or automate tasks, programming empowers you to bring your ideas to life. The ability to turn your concepts into reality can be incredibly satisfying and fulfilling.
+## 🎨 Crafting Beyond Work 🎨
 
-### Problem Solving and Critical Thinking
+Coding isn't just a suit-and-tie endeavor; it's a creative wand for your wildest ideas. 🧙‍♂️ Build a website, conjure a mobile app, craft a game, or automate everyday tasks. Programming's magic turns ideas into reality, and that's a power that resonates far beyond the lines of code.
 
-Programming is, at its core, about problem-solving. If you enjoy tackling challenges and finding solutions, programming provides an ideal platform. The analytical and logical thinking skills you develop while coding can be applied to various aspects of life, making you a more effective problem solver overall.
+## 🔍 Unravel Challenges, Ignite Genius 🔍
 
-### Curiosity and Learning
+Coding is the realm of puzzles, and you're the Sherlock of software. 🔍 Love cracking conundrums and conjuring solutions? You're in the right matrix. Logic and analysis honed in the realm of code-solving can revolutionize how you untangle life's mysteries.
 
-Some individuals are simply curious about how software and technology work. If you find joy in unraveling the mysteries behind the digital tools you use daily, programming can be an exciting journey of discovery. The sense of wonder and accomplishment that comes from understanding complex systems can be incredibly rewarding.
+## 🌌 Curiosity, the Cosmic Force 🌌
 
-### Building a Strong Foundation
+Some souls are drawn by the cosmic pull of the unknown - and that's coding's gravity for you. 🪐 The intrigue of the digital cosmos, the marvel of unraveling complexities - it's a starlit journey of discovery and accomplishment.
 
-Even if you don't plan to become a professional programmer, learning the basics of programming can provide a solid foundation for understanding the digital world. It enables you to communicate more effectively with developers, understand technical concepts, and make informed decisions in various contexts.
+## 🏗️ Lay the Foundation of Knowledge 🏗️
+
+Even if your coding path isn't aiming for the stars, the basics lay the groundwork for understanding this digital universe. 🌐 Communicate fluently with developers, comprehend complex concepts, and decode technical decisions with confidence.
+
+Keep the passion burning and your mind open, fellow coder! 🚀🔥 Your journey is as unique as your fingerprint. Remember, every line of code you write is a step toward building your own digital constellation. 🌌✨
 
 ## Syndromes
 
