Revert "New Datalists to Code-New"

--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -1,38 +1,15 @@
 
 <h1>Tools That You Require to Start Your Development Journey</h1>
 
-In order to start your development journey, Definitely you need a PC / Laptop and IDE which stands for _Intergrated Development Environment_ does this sound overwhelm for you? Even if it does, Don't worry! we will teach you everything step by step and also we will provide "**GO-TO**" resources to check yourself. 
+In order to start your development journey, Definitely you need a PC / Laptop and IDE which stands for _Intergrated Development Environment_ does this sound overwhelm for you? Even if it does, Don't worry! we will teach you everything step by step. 
 
 Tools are like equipments that you cannot work without them, For a Wood woker hand tools are necessary to continue to cut woods. Same as like that, For developers we need right equipments to craft a magnificent <b><a href="https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app">Webapp</a></b>.
 
-<h3>Tools</h3>
-
+Tools
 - Computer / Laptop
 - IDE (Visual Studio Code / Sublime Text / Neovim)
 - Recommended Operating System
 - Difference between OS (for an extended knowledge)
 - Note taking App / Notebook
 
-Questions that a newbie must ask? 
---
-What is IDE? 
 
-An "IDE" is like a special computer program that helps people who are making software. It gives them tools to write, test, and organize their code all in one place. It's like a toolbox for coding.
-
-Lists of IDE
-- Visual Studio Code. | [Link](https://code.visualstudio.com/) ✨
-- Sublime Text. | [Link](https://www.sublimetext.com/) ✨
-- IntelliJ Idea | [Link](https://www.jetbrains.com/idea/) ✨
-- XCode. | [Link](https://developer.apple.com/xcode/) ✨
-- Webstorm. | [Link](https://www.jetbrains.com/webstorm/download/download-thanks.html) ✨
-
-**XCode** - _Xcode is like a special toolbox that helps people make apps for iPhones, iPads, and Mac computers._ 
-
-You can choose one of the IDE as your toolbox to continue your development journey, but some of them demanding higher CPU power to work in smooth, but <mark>**We recommend Visual Studio Code**</mark> because they've got extensive plugins, and community support. Including us, We use VS Code as well 😃😃.
-
-For Your Information, Supplemental resources why VSCode fair and square to all type of developer including super-beginners like you. 
-
-I personally love FireShip.io videos and we've tons of references in our "**Archive X**" where we saved all the authentic and up to date references to learn something new. 
-
-- 😎 [**VS Code In 100 Seconds**](https://www.youtube.com/watch?v=KMxo3T_MTvY&pp=ygUTV2h5IFZTIGNvZGUgaXMgZ29vZA==) By FireShip
-- 🌞 [**I Tried 10 Code Editors**](https://www.youtube.com/watch?v=8PhdfcX9tG0&pp=ygUUeGNvZGUgaW4gMTAwIHNlY29uZHM%3D) By FireShip
