Please review the new style of writing

--- a/Before You Start/1. Mindset.md
+++ b/Before You Start/1. Mindset.md
@@ -40,7 +40,7 @@ Even if your coding path isn't aiming for the stars, the basics lay the groundwo
 
 Keep the passion burning and your mind open, fellow coder! 🚀🔥 Your journey is as unique as your fingerprint. Remember, every line of code you write is a step toward building your own digital constellation. 🌌✨
 
-## Syndromes
+![Mindset](../Assets/Syndromes.webp)
 
 ### What is a Syndrome?
 
