Added IDE Lists on tools section

--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -12,4 +12,10 @@ Tools
 - Difference between OS (for an extended knowledge)
 - Note taking App / Notebook
 
+IDE Lists
+
+- Visual Studio Code - 📍 [**Link**](https://code.visualstudio.com/) 
+- Webstorm IDE - 📍 [**Link**](https://www.jetbrains.com/webstorm/) 
+- Sublime Text - 📍 [**Link**](https://www.sublimetext.com/) 
+- XCode - 📍 [Link](https://developer.apple.com/xcode/) 
 
