Added navigation / Tools page content

--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -1,21 +1,124 @@
+# Tools You Need to Start Your Development Journey 🛠️
 
-<h1>Tools That You Require to Start Your Development Journey</h1>
+To embark on your development journey, you'll need a 💻 or 🖥️ and an IDE, which stands for _Integrated Development Environment_. If that term sounds overwhelming, fear not! We're here to guide you through each step of the way. 🚀
 
-In order to start your development journey, Definitely you need a PC / Laptop and IDE which stands for _Intergrated Development Environment_ does this sound overwhelm for you? Even if it does, Don't worry! we will teach you everything step by step. 
+Think of tools as the equipment you can't work without. Just as a woodworker requires hand tools to cut wood, developers need the right equipment to craft a magnificent [Webapp](https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app). ✨
 
-Tools are like equipments that you cannot work without them, For a Wood woker hand tools are necessary to continue to cut woods. Same as like that, For developers we need right equipments to craft a magnificent <b><a href="https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app">Webapp</a></b>.
+## Essential Tools 🧰
 
-Tools
-- Computer / Laptop
-- IDE (Visual Studio Code / Sublime Text / Neovim)
-- Recommended Operating System
-- Difference between OS (for an extended knowledge)
-- Note taking App / Notebook
+1. **Computer / Laptop** 💻
+    
+    Your development setup begins with a reliable computer or laptop. This will serve as the foundation for your coding endeavors. Don't worry if you have a less powerful computer; we have a solution using online IDEs. 💪
+    <br/>
+    <br/>
 
-IDE Lists
+2. **IDE (Integrated Development Environment)** 💼
+    
+    An IDE is your virtual workspace for writing, testing, and debugging code. It provides a suite of tools to streamline the development process.
 
-- Visual Studio Code - 📍 [**Link**](https://code.visualstudio.com/) 
-- Webstorm IDE - 📍 [**Link**](https://www.jetbrains.com/webstorm/) 
-- Sublime Text - 📍 [**Link**](https://www.sublimetext.com/) 
-- XCode - 📍 [Link](https://developer.apple.com/xcode/) 
+    Below are some of our top 5 user-friendly and beginner-friendly IDE recommendations:
 
+    | IDE                 | Description           | Link                                      |
+    |---------------------|-----------------------|-------------------------------------------|
+    | Visual Studio Code | A powerful and extensible code editor loved by developers | [Download](https://code.visualstudio.com/) |
+    | Eclipse IDE       | A versatile IDE with a wide range of plugins and support for various languages | [Download](https://www.eclipse.org/) |
+    | NetBeans           | An easy-to-use IDE that offers great Java development capabilities | [Download](https://netbeans.apache.org/) |
+    | Atom              | A hackable text editor that's beginner-friendly and highly customizable | [Download](https://atom.io/) |
+    | Code::Blocks     | A free, open-source IDE suitable for C and C++ programming | [Download](https://www.codeblocks.org/) |
+    <br/>
+
+3. **Recommended Operating System** 🖥️
+    
+    While most modern operating systems can support development, some are better suited for specific tasks. Consider these options:
+
+    - **Windows**: Widely used with extensive software support.
+    - **macOS**: Great for Apple ecosystem development.
+    - **Linux**: Offers customization and developer-friendly features.
+    
+    <br/>
+    <br/>
+
+4. **Understanding Different Operating Systems** 🌐
+    
+    Operating systems (OS) are the software that manage hardware and software resources and provide services to applications. Here are some pros and cons of common OS types:
+    
+    | Operating System | Pros | Cons |
+    |------------------|------|------|
+    | Windows          | Extensive software support, user-friendly interface | Less customizable, can be resource-intensive |
+    | macOS            | Seamless integration with Apple devices, Unix-based terminal | Limited hardware choices, closed ecosystem |
+    | Linux            | Customizability, open-source community, developer tools | Learning curve for beginners, hardware compatibility |
+    <br/>
+    
+
+5. **Note-Taking Apps** 📝
+    
+    Keeping track of your ideas, code snippets, and progress is crucial. Consider using note-taking apps like:
+    
+    | App     | Description | Link |
+    |---------|-------------|------|
+    | Notion  | An all-in-one workspace for notes, tasks, wikis | [Download](https://www.notion.so/) |
+    | Obsidian | A knowledge base that works on local Markdown files | [Download](https://obsidian.md/) |
+    | Evernote | A note-taking app with rich features and cloud sync | [Download](https://evernote.com/) |
+    | OneNote  | Microsoft's digital notebook for organizing ideas | [Download](https://www.onenote.com/) |
+    <br/>
+
+## Online IDEs and Other Important Tools 💻
+
+6. **Online IDEs** 🌐
+    
+    If you're not ready to install a full-fledged IDE, you can start with online IDEs that run directly in your browser. These can be convenient for quick experiments and learning.
+
+    | Online IDE          | Description           | Link                                      |
+    |---------------------|-----------------------|-------------------------------------------|
+    | Replit              | Code, collaborate, compile, run           | [Link](https://replit.com/) |
+    | CodeSandbox         | Create web applications in your browser | [Link](https://codesandbox.io/) |
+    | JSFiddle            | Test your HTML, CSS, and JavaScript online | [Link](https://jsfiddle.net/) |
+    | GitHub Codespaces   | Develop directly in your GitHub repository | [Link](https://github.com/features/codespaces) |
+    <br/>
+
+7. **Text Editors: Complementing Your IDE** ✍️
+    
+    Even if you have a powerful IDE, there might be times when a lightweight text editor comes in handy. Text editors are great for quick edits, opening individual files, or focusing on simplicity.
+
+    **Do You Need Both?**
+    
+    While IDEs offer extensive tools for development, text editors can still have their place. IDEs provide a comprehensive environment for large projects, debugging, and integrated toolsets. On the other hand, text editors are lightweight and perfect for quick code edits, working with configuration files, or when you prefer minimal distractions.
+
+    **Use Cases for Text Editors and IDEs**
+    - **Text Editors**:
+      - Quick code edits and tweaks
+      - Working with plain text files
+      - Focusing on individual files without project structure
+      - Learning basic coding without the complexity of a full IDE
+
+    - **IDEs**:
+      - Developing large-scale applications
+      - Integrated debugging and testing tools
+      - Managing complex projects with multiple files and dependencies
+      - Utilizing code suggestions, auto-completion, and advanced features
+    <br/>
+    <br/>
+    <br/>
+
+8. **Browser Developer Tools** 🌐
+    
+    If you're planning to become a web developer, you'll work with web technologies. Browser developer tools are invaluable for debugging and inspecting web pages. They come built into modern browsers like Chrome and Firefox, which are also developer-friendly.
+
+    We recommend using Chrome for development.
+    <br/>
+    <br/>
+
+9. **Additional Resources** 📚
+    
+    For version control, we have a dedicated section that covers Git and GitHub. You can learn more about version control and collaboration by visiting our guide: [Git & GitHub](./4.%20Git%20&%20Github.md).
+    <br/>
+    <br/>
+
+Remember, the tools you choose can significantly impact your development experience. Take your time to explore and find the ones that suit your workflow and preferences. Happy coding! 👩‍💻👨‍💻
+
+<br/>
+<br/>
+
+# Page Navigation
+
+[Next Page](./3.%20Setup%20Process.md) | [Previous Page](./1.%20Mindset.md)
