New banners and changed nav button position.

--- a/Before You Start/2. Tools.md
+++ b/Before You Start/2. Tools.md
@@ -121,4 +121,4 @@ Remember, the tools you choose can significantly impact your development experie
 
 # Page Navigation
 
-[Next Page](./3.%20Setup%20Process.md) | [Previous Page](./1.%20Mindset.md)
+ [Previous Page](./1.%20Mindset.md) | [Next Page](./3.%20Setup%20Process.md)
