Changes File named & Added net content for setup

--- a/Before You Start/1. Mindset and Challenges.md
+++ b/Before You Start/1. Mindset and Challenges.md
@@ -70,7 +70,7 @@ _Coding can be intense and demanding, leading to burnout—a state of emotional,
 |--|--|--|
 | 🚀 [How to Deal With Programming Burnout](https://pythonistaplanet.com/programmer-burnout/#google_vignette) | 3 Mins | Blog Post |
 | ❤️ [Dealing With Burnout isn't Easy](https://www.youtube.com/watch?v=YyjBKqsJqAo&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 7 Mins | Video |
-| ⚡ [How to Avoid Burnout By Ali Abdaal](https://www.youtube.com/watch?v=lylveWfXknk&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 5 Mins | Video | 
+| ⚡ [How to Avoid Burnout By Ali Abdaal](https://www.youtube.com/watch?v=lylveWfXknk&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 5 Mins | Video |
 | 🎒 [15 Minutes A Day to Prevent Burnout - TEDX Talk](https://www.youtube.com/watch?v=Uk3OAGcjQPA&pp=ygUlSG93IHRvIGRlYWwgd2l0aCBidXJub3V0IGFzIGEgc3R1ZGVudA%3D%3D) | 15 Mins | Video |
 
 ## **Perfectionism**
@@ -94,4 +94,4 @@ _"**Tutorial hell**" is when someone who's learning to code gets stuck always do
 
 # Page Navigation
 
-[Next Page](./2.%20Tools.md)
+[Next Page](./2.%20Dev-Tools%20Setup%20Guide.md)
