Added Nav - 3rd page

--- a/Before You Start/3. Workspace Setup Guide..md
+++ b/Before You Start/3. Workspace Setup Guide..md
@@ -145,3 +145,7 @@ Enhance your coding experience with these valuable resources:
 - 🛍️ [VS Code Marketplace](https://marketplace.visualstudio.com/vscode): Explore and download extensions to enhance your development environment.
 
 Remember that practice and continuous learning are key to improving your coding skills. Utilize these resources to enhance your knowledge and efficiency as a developer.
+
+# Page Navigation
+
+ [Previous Page](./2.%20Dev-Tools%20Setup%20Guide.md) | [Next Page](./4.%20Git%20&%20Github.md)
