Updated What youll learn Section

--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -11,8 +11,6 @@ Following our exploration of Git, we will transition to the realm of GitHub, rep
 | [1. Git Fundamentals](#git-fundamentals) | 🚀 Learning Git First |
 | [2. GitHub Essentials](#github-essentials) | ✨ GitHub Comes Next |
 
-
-
 ## Git Fundamentals
 
 In the ever-evolving world of software development, version control is an indispensable tool. Git, the focus of our initial exploration, stands as the bedrock of version control systems, enabling developers to efficiently manage their code, keep track of changes, and collaborate seamlessly.
@@ -20,6 +18,7 @@ In the ever-evolving world of software development, version control is an indisp
 In simple terms Git is like a super helpful tool that makes it easy for people to work on computer programs together and keep track of changes they make. It's like a solid foundation for managing code.
 
 ### Why Git Matters
+
 ---
 
 Git's significance cannot be overstated. It empowers individuals and teams to work on projects of any scale with confidence. Whether you're a solo developer working on a personal project or part of a large team collaborating on a complex software solution, Git provides the framework for structured, organized, and error-resistant code development.
@@ -27,13 +26,17 @@ Git's significance cannot be overstated. It empowers individuals and teams to wo
 (We are using git to push our files to this repository for context)
 
 ### What You'll Learn
+
 ---
 
 Throughout the "Git Fundamentals" section, you'll embark on a journey to master the essential concepts and workflows of Git. We'll cover topics such as:
 
-- **Git Basics**: Understanding the core concepts of repositories, commits, and branches.
-- **Working with Git**: Practicing the fundamental Git commands to manage your code.
-- **Collaboration**: Learning how to collaborate effectively with others using Git.
-- **Branching Strategies**: Exploring strategies for managing branches and code versions.
+1. **Git Installation**
+2. **Git Basics**
+3. **Git Commands**
+4. **Git Branching**
+5. **Working with Git**
+6. **Collaboration**
+7. **Branching Strategies**
 
 By the end of this section, you'll have a solid foundation in Git, setting the stage for you to become a proficient version control practitioner.
