--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -15,7 +15,7 @@ Following our exploration of Git, we will transition to the realm of GitHub, rep
 
 In the ever-evolving world of software development, version control is an indispensable tool. Git, the focus of our initial exploration, stands as the bedrock of version control systems, enabling developers to efficiently manage their code, keep track of changes, and collaborate seamlessly.
 
-In simple terms Git is like a super helpful tool that makes it easy for people to work on computer programs together and keep track of changes they make. It's like a solid foundation for managing code.
+In simple terms, Git is like a super helpful tool that makes it easy for people to work on computer programs together and keep track of changes they make. It's like a solid foundation for managing code.
 
 ### Why Git Matters
 
@@ -23,7 +23,7 @@ In simple terms Git is like a super helpful tool that makes it easy for people t
 
 Git's significance cannot be overstated. It empowers individuals and teams to work on projects of any scale with confidence. Whether you're a solo developer working on a personal project or part of a large team collaborating on a complex software solution, Git provides the framework for structured, organized, and error-resistant code development.
 
-(We are using git to push our files to this repository for context)
+(We are using Git to push our files to this repository for context)
 
 ### What You'll Learn
 
@@ -38,5 +38,17 @@ Throughout the "Git Fundamentals" section, you'll embark on a journey to master 
 5. **Working with Git**
 6. **Collaboration**
 7. **Branching Strategies**
+8. **Git History**
+9. **Stashing**
+10. **Reset and Revert**
+11. **Interactive Rebase**
+12. **Gitignore**
+13. **Tags**
+14. **Remote Repositories**
+15. **Forks and Pull Requests (GitHub-specific)**
+16. **Setting Up Git with GitHub**
+17. **Git Best Practices**
+18. **Troubleshooting**
+19. **Git GUI Tools**
 
 By the end of this section, you'll have a solid foundation in Git, setting the stage for you to become a proficient version control practitioner.
