--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -9,7 +9,7 @@ Following our exploration of Git, we will transition to the realm of GitHub, rep
 | Section            | Description               |
 |--------------------|---------------------------|
 | [1. Git Fundamentals](#git-fundamentals) | 🚀 Learning Git First |
-| [2. GitHub Essentials](#github-essentials) | ✨ GitHub Comes Next |
+| [2. GitHub Essentials]() | ✨ GitHub Comes Next |
 
 ## Git Fundamentals
 
