made the what youll learn links - QOL

--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -31,24 +31,24 @@ Git's significance cannot be overstated. It empowers individuals and teams to wo
 
 Throughout the "Git Fundamentals" section, you'll embark on a journey to master the essential concepts and workflows of Git. We'll cover topics such as:
 
-1. **Git Installation**
-2. **Git Basics**
-3. **Git Commands**
-4. **Git Branching**
-5. **Working with Git**
-6. **Collaboration**
-7. **Branching Strategies**
-8. **Git History**
-9. **Stashing**
-10. **Reset and Revert**
-11. **Interactive Rebase**
-12. **Gitignore**
-13. **Tags**
-14. **Remote Repositories**
-15. **Forks and Pull Requests (GitHub-specific)**
-16. **Setting Up Git with GitHub**
-17. **Git Best Practices**
-18. **Troubleshooting**
-19. **Git GUI Tools**
+1. **[Git Installation](#git-installation)**
+2. **[Git Basics](#git-basics)**
+3. **[Git Commands](#git-commands)**
+4. **[Git Branching](#git-branching)**
+5. **[Working with Git](#working-with-git)**
+6. **[Collaboration](#collaboration)**
+7. **[Branching Strategies](#branching-strategies)**
+8. **[Git History](#git-history)**
+9. **[Stashing](#stashing)**
+10. **[Reset and Revert](#reset-and-revert)**
+11. **[Interactive Rebase](#interactive-rebase)**
+12. **[Gitignore](#gitignore)**
+13. **[Tags](#tags)**
+14. **[Remote Repositories](#remote-repositories)**
+15. **[Forks and Pull Requests (GitHub-specific)](#forks-and-pull-requests)**
+16. **[Setting Up Git with GitHub](#setting-up-git-with-github)**
+17. **[Git Best Practices](#git-best-practices)**
+18. **[Troubleshooting](#troubleshooting)**
+19. **[Git GUI Tools](#git-gui-tools)**
 
 By the end of this section, you'll have a solid foundation in Git, setting the stage for you to become a proficient version control practitioner.
